refactor: Project, Skill, Studio, Portfolio를 별도의 DTO 객체로 변경